# UBID-Fabric

./: .env.example  .gitignore  ARCHITECTURE.md  DEMO_GUIDE.md  Dockerfile  README.md  UBID_Fabric_Document.md  UBID_Fabric_Implementation_Plan.md  demo.py  docker-compose.yml  pyproject.toml
frontend/: app.js  index.html  styles.css
migrations/: init.sql
src/ubid_fabric/: __init__.py  ai_service.py  app.py  config.py  conflict_engine.py  connectors.py  crdt.py  db.py  event_builder.py  event_store.py  evidence_graph.py  idempotency.py  lamport.py  models.py  orchestrator.py  pipeline.py  reconciliation.py  schema_mapper.py  stream_consumer.py  target_writers.py  ubid_resolver.py
tests/: test_core.py
